2003-01-09  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/music-glossary.tely (Top): translate melisma.

2003-01-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/music-glossary.tely (Top): add melisma.

2002-01-08  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/gregorian-ligature-engraver.cc: bugfix: added missing
	interfaces for (abstract) grob GregorianLigature

	* lily/vaticana-ligature-engraver.cc, lily/vaticana-ligature.cc:
	renamed head* -> glyph_name*, x-shift* -> x-offset*

	* scm/grob-property-description.scm: bugfix: added missing descriptions

2003-01-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/chord-names-dpnj.ly: New file.

	* scm/double-plus-new-chord-name.scm: Implement full and partial
	exceptions.

	* lily/lexer.ll: <markup>: Allow dash and hyphen in markup command.

	* scm/double-plus-new-chord-name.scm
	(double-plus-new-chord->markup): Fix sub->markup.


2003-01-07  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/custos-engraver.cc: added TODO; editorial changes

	* lily/ligature-bracket-engraver.cc: added typeset_ligature () for
	consistency with other ligature engravers; removed access on (now)
	private variable _ligature of Ligature_engraver

	* lily/include/ligature-engraver.hh, lily/ligature-engraver.cc:
	renamed last_bound -> last_bound_; issue programming_error on
	abstract method calls; moved primitives code from
	Mensural_bracket_engraver to here (because almost ligature
	engravers will need it); renamed try_stop_ligature () ->
	typeset_ligature (); bugfix: store primitives of finished ligature
	in separate variable finished_primitives_ to avoid clash on input
	like "\] \["; added current_ligature () to enable access on
	private variable _ligature

	* lily/mensural-ligature-engraver.cc: removed primitives_ code
	(now in super class); renamed try_stop_ligature () ->
	typeset_ligature ()

	* lily/mensural-ligature.cc: issue programming_error on abstract
	method calls
