@@ -399,6 +399,7 @@ tenor
 \\textIII
 \\textscript
 TextScript 
+TextSpanner
 \\thenotes
 \\thrd
 Thread
